--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <body>
 
 <h1>MANCEL</h1>
-<p>The Creator.</p>
+<h2></h2>
+<p></p>
+<a href="https://twitter.com/mancel">communicator</a>
+<a href="https://foundation.app/mancel">nft</a>
+
 
 </body>
 </html>
