--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-<h1>MANCEL</h1>
-<h2></h2>
-<p></p>
-<a href="https://twitter.com/mancel">communicator</a>
-<a href="https://foundation.app/mancel">nft</a>
-
+<div class="nav">
+    <ul>
+        <li><a href="https://twitter.com/mancel">communication portal</a></li>
+        <li><a href="https://foundation.app/mancel">non-fungible tokens</a></li>
+    </ul>
+</div>
 
 </body>
 </html>
