--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 
+<div class="logo">
+    <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
+</div>
+
 <div class="nav">
     <ul>
         <li><a href="https://twitter.com/mancel">communication portal</a></li>
