--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a href="https://twitter.com/mancel">communication portal</a></li>
         <li><a href="https://foundation.app/mancel">non-fungible tokens</a></li>
-        <li><a href="https://zeropoet.github.io/the-library">the library</a></li>
+        <li><a href="https://zeropoet.github.io/the-library.html">the library</a></li>
     </ul>
 </div>
 
