--- a/the-library.html
+++ b/the-library.html
@@ -1,31 +1,54 @@
-**Project: "The Library of The Singularity"**
+<!DOCTYPE html>
 
-**Vision:**
-- Create a dynamic, NFT-driven web3 experience.
-- Customized journeys for users, integrating Pak's LostPoets, Merge, The Fungible, ASH, and other digital asset collections.
-- Units formed with LostPoets, reflecting user uniqueness.
+<html>
+<head>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 
-**Key Concepts:**
-1. **Dynamic Content:** Personalized for users based on their web3 wallet and NFT holdings.
-2. **Burner Paths:** Unique experiences for those who have burned specific NFT assets.
-3. **LostPoets Library:** An immutable, value-boosting hub for the LostPoets collection.
-4. **Replay Value:** Encourage revisits and discoveries with branching narratives.
-5. **Expandability:** Seamless inclusion of other collections and game mechanics.
-6. **Community-Centric:** Resources reinvested into players and user-driven content.
+<div class="logo">
+    <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
+</div>
 
-**Merge and DAO:**
-- "Alpha Mass" as primary stakeholders in DAO decision-making and fund allocation.
-- Fairness and autonomy with resource allocation for community-driven initiatives.
+<div class="nav">
+    <h1>Project: The Library of The Singularity</h1>
+    <h2>Vision:</h2>
+    <ul>
+        <li>- Create a dynamic, NFT-driven web3 experience.</li>
+        <li>- Customized journeys for users, integrating Pak's LostPoets, Merge, The Fungible, ASH, and other digital asset collections.</li>
+        <li>- Units formed with LostPoets, reflecting user uniqueness.</li>
+    </ul>
+    <h2>Key Concepts:</h2>
+    <ul>
+        <li>1. Dynamic Content: Personalized for users based on their web3 wallet and NFT holdings.</li>
+        <li>2. Burner Paths: Unique experiences for those who have burned specific NFT assets.</li>
+        <li>3. LostPoets Library: An immutable, value-boosting hub for the LostPoets collection.</li>
+        <li>4. Replay Value: Encourage revisits and discoveries with branching narratives.</li>
+        <li>5. Expandability: Seamless inclusion of other collections and game mechanics.</li>
+        <li>6. Community-Centric: Resources reinvested into players and user-driven content.</li>
+    </ul>
+    <h2>Merge and DAO:</h2>
+    <ul>
+        <li>- "Alpha Mass" as primary stakeholders in DAO decision-making and fund allocation.</li>
+        <li>- Fairness and autonomy with resource allocation for community-driven initiatives.</li>
+    </ul>
+    <h2>Unit Formation</h2>
+    <ul>
+        <li>- Unique units formed from LostPoets to build and engage in missions and challenges.</li>
+        <li>- Integration of The Fungible collection, ASH token for in-game currency.</li>
+    </ul>
+    <h2>Narrative and User Involvement:</h2>
+    <ul>
+        <li>- Users shaping narratives and content.</li>
+        <li>- Transparency and open data.</li>
+    </ul>
+    <h2>ASSET INTEGRITY and Openness:</h2>
+    <ul>
+        <li>- Decentralized ownership.</li>
+        <li>- Governance mechanisms for sustainability.</li>
+        <li>- Cross-collection interoperability and community engagement.</li>
+    </ul>
+</div>
 
-**Unit Formation:**
-- Unique units formed from LostPoets to build and engage in missions and challenges.
-- Integration of The Fungible collection, ASH token for in-game currency.
-
-**Narrative and User Involvement:**
-- Users shaping narratives and content.
-- Transparency and open data.
-
-**ASSET INTEGRITY and Openness:**
-- Decentralized ownership.
-- Governance mechanisms for sustainability.
-- Cross-collection interoperability and community engagement. 
+</body>
+</html>
