--- a/the-library.html
+++ b/the-library.html
@@ -10,7 +10,7 @@
     <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
 </div>
 
-<div class="nav">
+<div class="library">
     <h1>Project: The Library of The Singularity</h1>
     <h2>Vision:</h2>
     <ul>
