css formatting update

--- a/the-library.html
+++ b/the-library.html
@@ -14,9 +14,9 @@
     <h1>Project: The Library of The Singularity</h1>
     <h2>Vision:</h2>
     <ul>
-        <li>- Create a dynamic, NFT-driven web3 experience.</li>
-        <li>- Customized journeys for users, integrating Pak's LostPoets, Merge, The Fungible, ASH, and other digital asset collections.</li>
-        <li>- Units formed with LostPoets, reflecting user uniqueness.</li>
+        <li>Create a dynamic, NFT-driven web3 experience.</li>
+        <li>Customized journeys for users, integrating Pak's LostPoets, Merge, The Fungible, ASH, and other digital asset collections.</li>
+        <li>Units formed with LostPoets, reflecting user uniqueness.</li>
     </ul>
     <h2>Key Concepts:</h2>
     <ul>
@@ -29,24 +29,24 @@
     </ul>
     <h2>Merge and DAO:</h2>
     <ul>
-        <li>- "Alpha Mass" as primary stakeholders in DAO decision-making and fund allocation.</li>
-        <li>- Fairness and autonomy with resource allocation for community-driven initiatives.</li>
+        <li>"Alpha Mass" as primary stakeholders in DAO decision-making and fund allocation.</li>
+        <li>Fairness and autonomy with resource allocation for community-driven initiatives.</li>
     </ul>
     <h2>Unit Formation</h2>
     <ul>
-        <li>- Unique units formed from LostPoets to build and engage in missions and challenges.</li>
-        <li>- Integration of The Fungible collection, ASH token for in-game currency.</li>
+        <li>Unique units formed from LostPoets to build and engage in missions and challenges.</li>
+        <li>Integration of The Fungible collection, ASH token for in-game currency.</li>
     </ul>
     <h2>Narrative and User Involvement:</h2>
     <ul>
-        <li>- Users shaping narratives and content.</li>
-        <li>- Transparency and open data.</li>
+        <li>Users shaping narratives and content.</li>
+        <li>Transparency and open data.</li>
     </ul>
     <h2>ASSET INTEGRITY and Openness:</h2>
     <ul>
-        <li>- Decentralized ownership.</li>
-        <li>- Governance mechanisms for sustainability.</li>
-        <li>- Cross-collection interoperability and community engagement.</li>
+        <li>Decentralized ownership.</li>
+        <li>Governance mechanisms for sustainability.</li>
+        <li>Cross-collection interoperability and community engagement.</li>
     </ul>
 </div>
 
