type changes and margins

--- a/the-library.html
+++ b/the-library.html
@@ -7,11 +7,13 @@
 <body>
 
 <div class="logo">
-    <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
+    <a href="https://mancel.xyz">
+        <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
+    </a>
 </div>
 
 <div class="library">
-    <h1>Project: The Library of The Singularity</h1>
+    <h1>THE LIBRARY OF THE SINGULARITY</h1>
     <h2>Vision:</h2>
     <ul>
         <li>Create a dynamic, NFT-driven web3 experience.</li>
