--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 <body>
 
 <div class="logo">
-    <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
+    <a href="https://mancel.xyz">
+        <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
+    </a>
 </div>
 
 <div class="nav">
     <ul>
-        <li><a href="https://twitter.com/mancel">communication portal</a></li>
-        <li><a href="https://foundation.app/mancel">non-fungible tokens</a></li>
-        <li><a href="https://zeropoet.github.io/the-library.html">the library</a></li>
+        <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a></li>
+        <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a></li>
+        <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY</a></li>
     </ul>
 </div>
 
