--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
     <title>MANCEL</title>
     <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
