the library v1 final commit

--- a/the-library.html
+++ b/the-library.html
@@ -26,7 +26,7 @@
     <ul>
         <li>1. Dynamic Content: Personalized for users based on their web3 wallet and NFT holdings.</li>
         <li>2. Burner Paths: Unique experiences for those who have burned specific NFT assets.</li>
-        <li>3. LostPoets Library: An immutable, value-boosting hub for the LostPoets collection.</li>
+        <li>3. LostPoets Library: An immutable, value-boosting hub for the LostPoets collection to call home.</li>
         <li>4. Replay Value: Encourage revisits and discoveries with branching narratives.</li>
         <li>5. Expandability: Seamless inclusion of other collections and game mechanics.</li>
         <li>6. Community-Centric: Resources reinvested into players and user-driven content.</li>
