--- a/the-library.html
+++ b/the-library.html
@@ -19,7 +19,7 @@
     <h2>Vision:</h2>
     <ul>
         <li>Create a dynamic, NFT-driven web3 experience.</li>
-        <li>Customized journeys for users, integrating Pak's LostPoets, Merge, The Fungible, ASH, and other digital asset collections.</li>
+        <li>Customized journeys for users, integrating LostPoets, Merge, The Fungible, ASH, and other digital asset collections.</li>
         <li>Units formed with LostPoets, reflecting user uniqueness.</li>
     </ul>
     <h2>Key Concepts:</h2>
@@ -33,7 +33,7 @@
     </ul>
     <h2>Merge and DAO:</h2>
     <ul>
-        <li>"Alpha Mass" as primary stakeholders in DAO decision-making and fund allocation.</li>
+        <li>'Alpha Mass' as primary stakeholders in DAO decision-making and fund allocation.</li>
         <li>Fairness and autonomy with resource allocation for community-driven initiatives.</li>
     </ul>
     <h2>Unit Formation</h2>
@@ -46,7 +46,7 @@
         <li>Users shaping narratives and content.</li>
         <li>Transparency and open data.</li>
     </ul>
-    <h2>ASSET INTEGRITY and Openness:</h2>
+    <h2>Asset Integrity and Openness:</h2>
     <ul>
         <li>Decentralized ownership.</li>
         <li>Governance mechanisms for sustainability.</li>
