link name changes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <div class="nav">
     <ul>
-        <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a></li>
-        <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a></li>
+        <li><a href="https://twitter.com/mancel">ZERO PORTAL</a></li>
+        <li><a href="https://foundation.app/mancel">TOKENS</a></li>
         <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY</a></li>
     </ul>
 </div>
