caps vs no caps

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <div class="nav">
     <ul>
-        <li><a href="https://twitter.com/mancel">PORTAL</a></li>
-        <li><a href="https://foundation.app/mancel">TOKENS</a></li>
-        <li><a href="https://zeropoet.github.io/the-library.html">LIBRARY</a></li>
+        <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a></li>
+        <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a></li>
+        <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY OF THE SINGULARITY</a></li>
     </ul>
 </div>
 
