the library v.1 complete

--- a/the-library.html
+++ b/the-library.html
@@ -19,7 +19,7 @@
     <h2>Vision:</h2>
     <ul>
         <li>Create a dynamic, NFT-driven web3 experience.</li>
-        <li>Customized journeys for users, integrating LostPoets, Merge, The Fungible, ASH, and other digital asset collections.</li>
+        <li>Customized journeys for users, integrating LostPoets, The Fungible, ASH, and other digital asset collections.</li>
         <li>Units formed with LostPoets, reflecting user uniqueness.</li>
     </ul>
     <h2>Key Concepts:</h2>
@@ -31,9 +31,9 @@
         <li>5. Expandability: Seamless inclusion of other collections and game mechanics.</li>
         <li>6. Community-Centric: Resources reinvested into players and user-driven content.</li>
     </ul>
-    <h2>Merge and DAO:</h2>
+    <h2>DAO:</h2>
     <ul>
-        <li>'Alpha Mass' as primary stakeholders in DAO decision-making and fund allocation.</li>
+        <li>All 'Poets' and 'Ghosts' as equal primary stakeholders in DAO decision-making and fund allocation.</li>
         <li>Fairness and autonomy with resource allocation for community-driven initiatives.</li>
     </ul>
     <h2>Unit Formation</h2>
@@ -44,6 +44,7 @@
     <h2>Narrative and User Involvement:</h2>
     <ul>
         <li>Users shaping narratives and content.</li>
+        <li>Burn mechanism to give unique traits to Poets/Ghosts and user paths.</li>
         <li>Transparency and open data.</li>
     </ul>
     <h2>Asset Integrity and Openness:</h2>
