Update index.html logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="logo">
     <a href="https://mancel.xyz">
-        <img src="img/ZERO.PNG" alt="Zero" width="100" height="100">
+        <img src="img/mancel.png" alt="Zero" width="100" height="100">
     </a>
 </div>
 
