--- a/the-library.html
+++ b/the-library.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>THE LIBRARY</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles-library.css">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
