--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a></li>
         <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a></li>
         <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY OF THE SINGULARITY</a></li>
+        <li>NFT-OS [building]</li>
     </ul>
 </div>
 
