--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a></li>
         <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a></li>
         <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY OF THE SINGULARITY</a></li>
-        <li><p>NFT-OS [building]</p></li>
+        <li><p>NFT-OS [an OS you can feel]</p></li>
     </ul>
 </div>
 
