Update index.html list icons

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <div class="nav">
     <ul>
-        <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a></li>
-        <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a></li>
-        <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY OF THE SINGULARITY</a></li>
-        <li><a>NFT-OS</a></li>
+        <li><span style='font-size:22px;'>&#9932;</span><a href="https://twitter.com/mancel">  COMMUNICATION PORTAL</a></li>
+        <li><span style='font-size:25px;'>&#128922;</span><a href="https://foundation.app/mancel">  NON-FUNGIBLE TOKENS</a></li>
+        <li><span style='font-size:30px;'>&#9004;</span><a href="https://zeropoet.github.io/the-library.html">  THE LIBRARY OF THE SINGULARITY</a></li>
+        <li><span style='font-size:24px;'>&#10697;</span><a>  NFT-OS</a></li>
     </ul>
 </div>
 
