--- a/the-library.html
+++ b/the-library.html
@@ -10,7 +10,7 @@
 
 <div class="logo">
     <a href="https://mancel.xyz">
-        <img src="img/zero.png" alt="Mancel" width="100" height="100">
+        <span style='font-size:50px;'>&#9004;</span>
     </a>
 </div>
 
