Update index.html .

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
 
 <div class="logo">
-    <a href="https://mancel.xyz">
-        <img src="img/mancel.png" alt="Mancel" width="100" height="100">
-    </a>
+    <a href="https://mancel.xyz"><img src="img/mancel.png" alt="Mancel" width="100" height="100">    </a>
 </div>
 
 <div class="nav">
@@ -22,6 +20,10 @@
         <li><span style='font-size:24px;'>&#10697;</span><a>  NFT-OS</a></li>
     </ul>
 </div>
+
+<footer>
+    <a href="https://mancel.xyz"><img src="img/zero.png" alt="Mancel" width="42" height="42"></a>
+</footer>
 
 </body>
 </html>
