--- a/the-library.html
+++ b/the-library.html
@@ -9,9 +9,7 @@
 <body>
 
 <div class="logo">
-    <a href="https://mancel.xyz">
-        <span style='font-size:50px;'>&#9004;</span>
-    </a>
+    <a href="https://mancel.xyz"><span style='font-size:50px;'>&#9004;</span></a>
 </div>
 
 <div class="library">
@@ -54,6 +52,10 @@
         <li>Cross-collection interoperability and community engagement.</li>
     </ul>
 </div>
+
+<footer>
+    <a href="https://mancel.xyz"><img src="img/zero.png" alt="Mancel" width="42" height="42"></a>
+</footer>
 
 </body>
 </html>
