--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 
 <div class="logo">
-    <a href="https://mancel.xyz"><img src="img/mancel.png" alt="Mancel" width="100" height="100">    </a>
+    <a href="https://mancel.xyz"><img src="img/mancel.png" alt="Mancel" width="100" height="100"></a>
 </div>
 
 <div class="nav">
     <ul>
-        <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL<span style='font-size:24px; padding-left: 10px;'>&#9932;</span></a></li>
-        <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS<span style='font-size:25px; padding-left: 10px;'>&#9671;</span></a></li>
-        <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY OF THE SINGULARITY<span style='font-size:30px; padding-left: 10px;'>&#9004;</span></a></li>
-        <li><a>NFT-OS<span style='font-size:25px; padding-left: 10px;'>&#10697;</span></a></li>
+        <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a><span style='font-size:24px; padding-left: 10px;'>&#9932;</span></li>
+        <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a><span style='font-size:25px; padding-left: 10px;'>&#9671;</span></li>
+        <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY OF THE SINGULARITY</a><span style='font-size:30px; padding-left: 10px;'>&#9004;</span></li>
+        <li><a>NFT-OS</a><span style='font-size:25px; padding-left: 10px;'>&#10697;</span></li>
     </ul>
 </div>
 
