--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a><span style='font-size:24px; padding-left: 10px;'>&#9932;</span></li>
         <li><a href="https://foundation.app/mancel">NON-FUNGIBLE TOKENS</a><span style='font-size:25px; padding-left: 10px;'>&#9671;</span></li>
-        <li><a href="https://zeropoet.github.io/the-library.html">THE LIBRARY OF THE SINGULARITY</a><span style='font-size:30px; padding-left: 10px;'>&#9004;</span></li>
+        <li><a>THE LIBRARY OF THE SINGULARITY</a><span style='font-size:30px; padding-left: 10px;'>&#9004;</span></li>
         <li><a>NFT-OS</a><span style='font-size:25px; padding-left: 10px;'>&#10697;</span></li>
     </ul>
 </div>
