--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <div class="nav">
     <ul>
-        <li><a href="https://twitter.com/mancel">COMMUNICATION PORTAL</a><span style='font-size:24px; padding-left: 10px;'>&#9932;</span></li>
-        <li><a href="https://foundation.app/mancel">NON•FUNGIBLE TOKENS</a><span style='font-size:25px; padding-left: 10px;'>&#9671;</span></li>
+        <li><a href="https://twitter.com/mancel">THE BLOCKCHAIN</a><span style='font-size:24px; padding-left: 10px;'>&#9932;</span></li>
+        <li><a href="https://foundation.app/mancel">NONFUNGIBLE TOKENS</a><span style='font-size:25px; padding-left: 10px;'>&#9671;</span></li>
         <li><a>THE LIBRARY OF THE SINGULARITY</a><span style='font-size:30px; padding-left: 10px;'>&#9004;</span></li>
-        <li><a>NFT•OS</a><span style='font-size:25px; padding-left: 10px;'>&#10697;</span></li>
+        <li><a>NFT-OS</a><span style='font-size:25px; padding-left: 10px;'>&#10697;</span></li>
     </ul>
 </div>
 
