--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a>NFT-OS</a><span style='font-size:25px; padding-left: 20px;'>&#10697;</span></li>
         <li><a href="https://foundation.app/mancel">TOKENS</a><span style='font-size:35px; padding-left: 20px;'>&#9671;</span></li>
-        <li><a href="https://twitter.com/_ProjectK_">PROJECT-K</a><span style='font-size:30px; padding-left: 20px;'>&#8707;</span></li>
+        <li><a href="https://foundation.app/collection/projectk">PROJECT-K</a><span style='font-size:30px; padding-left: 20px;'>&#8707;</span></li>
         <li><a href="https://twitter.com/mancel">THE BLOCKCHAIN</a><span style='font-size:35px; padding-left: 20px;'>&#164;</span></li>
         <li><a>THE SINGULARITY LIBRARY</a><span style='font-size:30px; padding-left: 20px;'>&#9004;</span></li>
     </ul>
