--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <div class="nav">
     <ul>
         <li><a href="https://opensea.io/mancel">NFT-OS</a><span style='font-size:25px; padding-left: 20px;'>&#10697;</span></li>
-        <li><a href="https://foundation.app/mancel">TOKENS</a><span style='font-size:35px; padding-left: 20px;'>&#9671;</span></li>
         <li><a href="https://twitter.com/mancel">BLOCKED CHAIN</a><span style='font-size:35px; padding-left: 20px;'>&#164;</span></li>
-        <li><a>THE SINGULARITY LIBRARY</a><span style='font-size:30px; padding-left: 20px;'>&#9004;</span></li>
+        <li><a href="https://foundation.app/mancel">THE SINGULARITY LIBRARY</a><span style='font-size:30px; padding-left: 20px;'>&#9004;</span></li>
     </ul>
 </div>
 
