--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="https://opensea.io/mancel">NFT-OS</a><span style='font-size:25px; padding-left: 20px;'>&#10697;</span></li>
         <li><a href="https://twitter.com/mancel">BLOCKED CHAIN</a><span style='font-size:35px; padding-left: 20px;'>&#164;</span></li>
-        <li><a href="https://foundation.app/mancel">THE SINGULARITY LIBRARY</a><span style='font-size:30px; padding-left: 20px;'>&#9004;</span></li>
+        <li><a href="https://foundation.app/@mancel?tab=collections">THE SINGULARITY LIBRARY</a><span style='font-size:30px; padding-left: 20px;'>&#9004;</span></li>
     </ul>
 </div>
 
