--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <ul>
         <li><a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY</a></li>
         <li><a href="https://twitter.com/mancel">BLOCKED CHAIN</a></li>
-        <li><a href="https://opensea.io/mancel">NFT-OS</a></li>
-        <li><a href="https://foundation.app/collection/mancel">MANCEL</a></li>        
+        <li><a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></li>        
     </ul>
 </div>
 
