--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 
 <div class="nav">
     <ul>
-        <li><a href="https://twitter.com/mancel">BLOCKEDCHAIN</a></li>
-        <li><a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY</a></li>
-        <li><a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></li>        
+        <li>
+            <a href="https://twitter.com/mancel">BLOCKEDCHAIN</a></br>
+            <p>The Sovereign</p>        
+        </li>
+        <li>
+            <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY</a></br>
+            <p>collect to understand</p>
+        </li>
+        <li>
+            <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
+            <p>an AI developed by Mancel for BLOCKEDCHAIN collectors</p>
+        </li>        
     </ul>
 </div>
 
