--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </li>
         <li>
             <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY</a></br>
-            <p>collect to understand</p>
+            <p>Collect to understand.</p>
         </li>
         <li>
             <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
-            <p>an AI developed by Mancel for BLOCKEDCHAIN collectors</p>
+            <p>An AI developed by Mancel for BLOCKEDCHAIN collectors.</p>
         </li>        
     </ul>
 </div>
