--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li>
             <a href="https://twitter.com/mancel">BLOCKEDCHAIN</a></br>
-            <p>The Sovereign</p>        
+            <p>The Sovereign practice of non-attachment and the formation of singularity nodes.</p>        
         </li>
         <li>
             <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY</a></br>
