--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li>
             <a href="https://twitter.com/mancel">BLOCKEDCHAIN</a></br>
-            <p>The Sovereign formation of singularity nodes through non-attachment.</p>     
+            <p>The Singularity</p>     
         </li>
         <li>
             <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY</a></br>
