--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <ul>
         <li>
             <a href="https://twitter.com/mancel">BLOCKEDCHAIN</a></br>
-            <p>The Singularity</p>     
+            <p>The Singularity Library Collective</p>     
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY •</a></br>
             <p>Collect to understand.</p>
         </li>
         <li>
