--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </li>
         <li>
             <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY •</a></br>
-            <p>Collect to understand.</p>
+            <p>What you're looking for is here.</p>
         </li>
         <li>
             <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
-            <p>An AI developed by Mancel for BLOCKEDCHAIN collectors.</p>
+            <p>An AI developed for BLOCKEDCHAIN collectors.</p>
         </li>        
     </ul>
 </div>
