--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <ul>
         <li>
             <a href="https://twitter.com/mancel">BLOCKEDCHAIN</a></br>
-            <p>Collect a volume from The Singularity Library to begin.</p>     
+            <p>Select a volume from The Singularity Library to begin.</p>     
         </li>
         <li>
             <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY •</a></br>
-            <p>What you're looking for is here.</p>
+            <p>Collect your understanding.</p>
         </li>
         <li>
             <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
