--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li>
             <a href="https://twitter.com/mancel">BLOCKEDCHAIN</a></br>
-            <p>Select a volume from The Singularity Library to begin.</p>     
+            <p>Select from The Singularity Library to begin.</p>     
         </li>
         <li>
             <a href="https://foundation.app/@mancel?tab=created">THE SINGULARITY LIBRARY •</a></br>
