--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </li>
         <li>
             <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
-            <p>An AI developed for BLOCKEDCHAIN collectors.</p>
+            <p>AI developed for BLOCKEDCHAIN collectors.</p>
         </li>        
     </ul>
 </div>
