--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <li>
             <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
             <p>AI developed for BLOCKEDCHAIN collectors.</p>
-        </li>        
+        </li>
+        <li>
+            <a>THE REPUBLIC</a></br>
+            <p>...</p>
+        </li>   
     </ul>
 </div>
 
