--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </li>
         <li>
             <a>THE REPUBLIC</a></br>
-            <p>A state of art.</p>
+            <p>The State of Art.</p>
         </li>   
     </ul>
 </div>
