--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <p>AI developed for BLOCKEDCHAIN collectors.</p>
         </li>
         <li>
-            <a>THE REPUBLIC</a></br>
-            <p>The State of Art.</p>
+            <a>THE REPUBLIC STATE OF ART</a></br>
         </li>   
     </ul>
 </div>
