--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
         </li>
         <li>
-            <a>THE REPUBLIC STATE OF ART</a></br>
+            <a>THE STATE OF THE ART</a></br>
         </li>   
     </ul>
 </div>
