--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://twitter.com/mancel">X</a></br>   
+            <a href="https://twitter.com/mancel">COMMUNICATIONS</a></br>   
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">THE • LIBRARY</a></br>
+            <a href="https://foundation.app/@mancel">THE LIBRARY</a></br>
         </li>
         <li>
             <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
