--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://foundation.app/@mancel">THE LIBRARY</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/collection/mancel">NFT-OS: MANCEL</a></br>
+            <a href="https://foundation.app/collection/mancel">NFT_OS</a></br>
         </li>
         <li>
             <a>THE STATE OF THE ART</a></br>
