--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <a href="https://foundation.app/@mancel">THE LIBRARY</a></br>
         </li>
         <li>
-            <a href="https://twitter.com/mancel">COMMUNICATIONS</a></br>   
+            <a href="https://twitter.com/mancel">THE BUDDHA</a></br>   
         </li>
         <li>
-            <a>THE STATE OF THE ART</a></br>
+            <a href="https://mancel.xyz/">THE STATE OF THE ART</a></br>
         </li>
     </ul>
 </div>
