--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="https://twitter.com/mancel">THE BUDDHA</a></br>   
         </li>
         <li>
-            <a href="https://mancel.xyz/">THE STATE OF THE ART</a></br>
+            <a href="https://mancel.xyz/">STATE OF THE ART</a></br>
         </li>
     </ul>
 </div>
