--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://foundation.app/@mancel">THE LIBRARY</a></br>
         </li>
         <li>
-            <a href="https://twitter.com/mancel">THE BUDDHA</a></br>   
+            <a href="https://twitter.com/mancel">PACABI • THE BUDDHA</a></br>   
         </li>
         <li>
             <a href="https://mancel.xyz/">STATE OF THE ART</a></br>
