--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://foundation.app/collection/mancel">NFT_OS</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel">THE LIBRARY</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">THE LIBRARY</a></br>
         </li>
         <li>
             <a href="https://twitter.com/mancel">PERIODIC TITLES</a></br>   
