--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href="https://foundation.app/@mancel?tab=created">THE LIBRARY</a></br>
         </li>
+        <li>
+            <a href="https://x.com/mancel">X</a></br>
+        </li>
     </ul>
 </div>
 
