--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://foundation.app/@mancel?tab=created">THE LIBRARY</a></br>
         </li>
         <li>
-            <a href="https://x.com/mancel">Jin</a></br>
+            <a href="https://x.com/mancel">Jin •</a></br>
         </li>
     </ul>
 </div>
