--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://foundation.app/collection/mancel">NFT_OS</a></br>
+            <a href="https://foundation.app/collection/mancel">nft_os</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">THE LIBRARY</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">the library</a></br>
         </li>
         <li>
-            <a href="https://x.com/mancel">Jin •</a></br>
+            <a href="https://x.com/mancel">zero</a></br>
         </li>
     </ul>
 </div>
