--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li>
             <a href="https://x.com/mancel">zero</a></br>
         </li>
+        <li>
+            <a href="https://foundation.app/collection/pacabi">pacabi</a></br>
+        </li>
     </ul>
 </div>
 
