--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://x.com/zer0p0et">blockedchain</a></br>
+            <a href="https://x.com/zer0p0et">Blockedchain</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">the library</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">The Library of Babel</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/collection/mancel">nft_os</a></br>
+            <a href="https://foundation.app/collection/mancel">NFT_OS</a></br>
         </li>
     </ul>
 </div>
