--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
             <a href="https://x.com/zer0p0et">Blockedchain</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">The Library of Babel</a></br>
+            <p>Nothing</p></br>
         </li>
-        <li>
-            <a href="https://foundation.app/collection/mancel">NFT_OS</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">The Library of Babel</a></br>
         </li>
     </ul>
 </div>
