--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <li>
             <a href="https://x.com/zer0p0et">Blockedchain</a></br>
         </li>
-            <a href="https://foundation.app/@mancel?tab=created">The Library of Babel</a></br>
+        <li>
+            <a href="https://foundation.app/@mancel?tab=created">La Biblioteca</a></br>
         </li>
     </ul>
 </div>
