--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://x.com/zer0p0et">Blockedchain</a></br>
+            <a href="https://x.com/zer0p0et">0. Blockedchain</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">La Biblioteca</a></br>
+            <a href="https://x.com/zer0p0et">1. Nothing</a></br>
+        </li>
+        <li>
+            <a href="https://foundation.app/@mancel?tab=created">2. Biblioteca</a></br>
         </li>
     </ul>
 </div>
