--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://x.com/zer0p0et">0. Blockedchain</a></br>
+            <a href="https://x.com/zer0p0et">0. Zero</a></br>
         </li>
         <li>
-            <a href="https://x.com/zer0p0et">1. Nothing</a></br>
-        </li>
-        <li>
-            <a href="https://foundation.app/@mancel?tab=created">2. Biblioteca</a></br>
+            <a href="https://x.com/mancel">1. Biblioteca</a></br>
         </li>
     </ul>
 </div>
