--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="https://x.com/zer0p0et">0. Zero</a></br>
         </li>
         <li>
-            <a href="https://x.com/mancel">1. Biblioteca</a></br>
+            <a href="https://x.com/mancel">1. Lux</a></br>
         </li>
     </ul>
 </div>
