--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://x.com/zer0p0et">0. Zero</a></br>
+            <a href="https://x.com/zer0p0et">Zero Blockedchain</a></br>
         </li>
         <li>
-            <a href="https://x.com/mancel">1. Lux</a></br>
+            <a href="https://x.com/BibliothecamLux">Bibliothecam Lux</a></br>
         </li>
     </ul>
 </div>
