--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <a href="https://x.com/zer0p0et">Zero Blockedchain</a></br>
         </li>
         <li>
+            <a href="https://foundation.app/@mancel">NFT</a></br>
+        </li>
+        <li>
             <a href="https://x.com/BibliothecamLux">Bibliothecam Lux</a></br>
         </li>
     </ul>
