--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li>
             <a href="https://x.com/BibliothecamLux">Bibliothecam Lux</a></br>
         </li>
+        <li>
+            <a>NFT_OS</a></br>
+        </li>
     </ul>
 </div>
 
