--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="https://foundation.app/@mancel">The Foundation</a></br>
         </li>
         <li>
-            <a href="https://x.com/BibliothecamLux">Bibliothecam Lux</a></br>
+            <a href="https://x.com/BibliothecamLux">Bibliothecam Lux Benigna</a></br>
         </li>
         <li>
             <a>NFT_OS</a></br>
