--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="https://x.com/zer0p0et">Zero Blockedchain</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel">The Foundation</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">The Foundation</a></br>
         </li>
         <li>
             <a href="https://x.com/BibliothecamLux">Bibliothecam Lux Benigna</a></br>
