--- a/index.html
+++ b/index.html
@@ -11,16 +11,10 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://x.com/zer0p0et">Zero Blockedchain</a></br>
+            <a href="https://x.com/mancel">NOTHING</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">The Foundation</a></br>
-        </li>
-        <li>
-            <a href="https://x.com/BibliothecamLux">Bibliothecam Lux Benigna</a></br>
-        </li>
-        <li>
-            <a>NFT_OS</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">LIGHT</a></br>
         </li>
     </ul>
 </div>
