--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://x.com/mancel">NOTHING</a></br>
+            <a href="https://x.com/mancel">•</a></br>
         </li>
         <li>
-            <a href="https://foundation.app/@mancel?tab=created">LIGHT</a></br>
+            <a href="https://foundation.app/@mancel?tab=created">•</a></br>
         </li>
     </ul>
 </div>
