--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="nav">
     <ul>
         <li>
-            <a href="https://x.com/mancel">•</a></br>
+            <a href="https://x.com/SalvatorLucis">•</a></br>
         </li>
         <li>
             <a href="https://foundation.app/@mancel?tab=created">•</a></br>
