--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    
 <head>
     <title>MANCEL</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
+
 <body>
+    
+<img src="/img/zero.png" alt="Satoshi Nakamoto" width="100" height="100">
 
 <div class="nav">
     <ul>
@@ -20,4 +24,5 @@
 </div>
 
 </body>
+
 </html>
