--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 </head>
 
 <body>
-<div class="nav">
-    <ul>
-        <li>
-            <img src="/img/zero.png" alt="Satoshi Nakamoto" width="77" height="77">
-        </li>
-    </ul>
-</div>
+img src="/img/zero.png" alt="Satoshi Nakamoto" width="77" height="77">
 </body>
 
 </html>
