--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-img src="/img/zero.png" alt="Satoshi Nakamoto" width="77" height="77">
+img src="/img/zero.png" alt="Satoshi Nakamoto">
 </body>
 
 </html>
