--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html lang="en">
     
 <head>
-    <title>MANCEL</title>
+    <title>Satoshi Nakamoto</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
-<div>
-img src="/img/zero.png" alt="Satoshi Nakamoto">
-</div>
+    <div>
+        <img src="/img/zero.png" alt="Satoshi Nakamoto">
+    </div>
 </body>
 
 </html>
