--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <img src="/img/zero.png" alt="Satoshi Nakamoto">
+        <img src="/img/zero.png" alt="Satoshi Nakamoto" width="100" height="100">
     </div>
 </body>
 
