--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
     
 <head>
-    <title>Satoshi Nakamoto</title>
+    <title>•</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
     <div>
-        <img src="/img/zero.png" alt="Satoshi Nakamoto" width="100" height="100">
+        <img src="/img/zero.png" alt="" width="100" height="100">
     </div>
 </body>
 
